[package]
edition = "2021"
name = "wiki-trail"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = {version = "3.2.2", default-features = false, features = ["derive", "std"]}
reqwest = {version = "0.11.11", default-features = false, features = ["blocking", "rustls-tls"]}
scraper = "0.13.0"
